--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "bunq/sdk_php": "^1.2",
         "fideloper/proxy": "^4.0",
+        "google/cloud-vision": "^0.19.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
