--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,15 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:YhQA/EyPBd3gyfo2ipMYFSIGIR7VzaMjn7DDVkwINLw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://b714623a.ngrok.io/
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+GOOGLE_CLOUD_KEY=AIzaSyDqJXGrpnOQ_FGlkVLurB4WP5ZoQeF22ak
+
+DB_CONNECTION=sqlite
+DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
