--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "fideloper/proxy": "^4.0",
         "google/cloud-vision": "^0.19.3",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "wapnen/google-cloud-vision-php": "dev-master"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
