--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "aws/aws-sdk-php": "^3.90",
         "bunq/sdk_php": "^1.2",
         "fideloper/proxy": "^4.0",
         "google/cloud-vision": "^0.19.3",
